--- a/fp-polytech.cabal
+++ b/fp-polytech.cabal
@@ -1,15 +1,15 @@
+cabal-version: 3.4
 name:                fp-polytech
 version:             0.0.0.1
 synopsis:            Sample project showing how to use HTF
 description:         Sample project showing how to use HTF
 homepage:            https://github.com/skogsbaer/HTF/
-license:             BSD3
+license:             BSD-3-Clause
 license-file:        LICENSE
 author:              Stefan Wehr
 maintainer:          mail@stefanwehr.de
 category:            Testing
 build-type:          Simple
-cabal-version:       >=1.10
 
 test-suite sample-tests
   type:              exitcode-stdio-1.0
@@ -25,10 +25,11 @@ test-suite sample-tests
     Part5.Tasks Part5.Tests
     Part6.Tasks Part6.Tests
     Lambdas
+  build-tool-depends: tasty-discover:tasty-discover
   build-depends:
     base,
     safe-exceptions,
-    tasty,
+    tasty <1.5,
     tasty-hunit,
     tasty-quickcheck,
     tasty-discover,
@@ -41,3 +42,43 @@ test-suite sample-tests
     filepath,
     pretty-terminal
   default-language:  Haskell2010
+  default-extensions:
+    ApplicativeDo
+    BangPatterns
+    BlockArguments
+    ConstraintKinds
+    DataKinds
+    DeriveFoldable
+    DeriveFunctor
+    DeriveGeneric
+    DeriveTraversable
+    DerivingStrategies
+    DerivingVia
+    DuplicateRecordFields
+    FlexibleContexts
+    FlexibleInstances
+    GADTs
+    GeneralizedNewtypeDeriving
+    ImportQualifiedPost
+    KindSignatures
+    LambdaCase
+    MultiParamTypeClasses
+    MultiWayIf
+    NamedFieldPuns
+    NumDecimals
+    NumericUnderscores
+    OverloadedLabels
+    OverloadedRecordDot
+    -- OverloadedStrings
+    PolyKinds
+    QuasiQuotes
+    RankNTypes
+    RecordWildCards
+    ScopedTypeVariables
+    StandaloneDeriving
+    TemplateHaskell
+    TupleSections
+    TypeApplications
+    TypeFamilies
+    TypeOperators
+    ViewPatterns
